# babilonia

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  auth.config.ts  auth.ts  drizzle.config.ts  eslint.config.mjs  next.config.ts  package-lock.json  package.json  proxy.ts  tsconfig.json  vitest.config.ts  vitest.setup.ts
app/: globals.css  layout.tsx
app/(app)/: layout.tsx  page.tsx  posicoes-lista.tsx
app/api/: routes.test.ts
components/: disclaimer.tsx
db/: index.ts  queries.ts  schema.ts  seed.ts
docs/: PRD_Babilonia.md  aceite-mvp.md  auditoria-ux.md  migracao-fundamentos.md
lib/: env.ts  format.ts  glossario.ts  liquidez.test.ts  liquidez.ts  settings.test.ts  settings.ts
scripts/: calcular-iv.ts  diagnostico-iv-gaps.ts  ingestao-cotahist.test.ts  ingestao-cotahist.ts  iv-rank.ts  preflight.ts  seed-watchlist.ts  varredura-iv-qualidade.ts  verificar-iv-history.ts
services/quant/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
services/quant/app/: __init__.py  main.py  schemas.py
services/quant/app/core/: config.py  db.py
services/quant/app/quant/: __init__.py  backtest.py  dados.py  liquidez.py  options_math.py  screening.py
services/quant/app/routers/: backtest.py  health.py  screening.py
services/quant/docs/: neon-readonly-role.md
services/quant/tests/: conftest.py  test_backtest.py  test_backtest_controle_vale3.py  test_backtest_provento.py  test_backtest_router.py  test_db_readonly.py  test_health.py  test_liquidez.py  test_options_math.py  test_screening.py  test_screening_router.py
(+145 files in other folders)
